# wasm-lambda

./: .gitignore  Cargo.toml  README.md  functions.json  wasm_example.wasm
src/: cli.rs  function.rs  main.rs  runtime.rs  trigger.rs
wasm_example/: Cargo.toml
wasm_example/src/: lib.rs
